syntax = "proto3";

package model_service;

import "google/protobuf/empty.proto";

option go_package = "github.com/UnicomAI/wanwu/api/proto/model-service";

service ModelService {
    // 模型导入(默认启用
    rpc ImportModel(ModelInfo) returns (google.protobuf.Empty) {}
    // 导入模型更新
    rpc UpdateModel(ModelInfo) returns (google.protobuf.Empty) {}
    // 导入模型删除
    rpc DeleteModel(DeleteModelReq) returns (google.protobuf.Empty) {}
    // ‌查询单个模型‌
    rpc GetModel(GetModelReq) returns (ModelInfo) {}
    // 导入模型列表展示
    rpc ListModels(ListModelsReq) returns (ModelInfos) {}
    // 模型启用/关闭
    rpc ChangeModelStatus(ModelStatusReq) returns (google.protobuf.Empty) {}
    // 根据模型ID查询
    rpc GetModelById(GetModelByIdReq) returns (ModelInfo) {}
    // llm/rerank/embedding模型列表展示
    rpc ListTypeModels(ListTypeModelsReq) returns (ModelInfos) {}
    // 根据模型ID列表查询
    rpc GetModelByIds(GetModelByIdsReq) returns (ModelInfos) {}
}

message ModelInfo {
    string userId = 1;
    string orgId = 2;
    string modelId = 3;
    string provider = 4;        // 模型供应商
    string modelType = 5;       // 模型类型
    string model = 6;           // 模型名称
    string displayName = 7;     // 模型显示名称
    string modelIconPath = 8;   // 模型图标路径
    string publishDate = 9;     // 模型发布时间
    bool isActive = 10;         // 启用状态（true: 启用，false: 禁用）
    string providerConfig = 11;
    int64 createdAt = 12;
    int64 updatedAt = 13;
    string modelDesc = 14;
}

message ModelInfos {
    repeated ModelInfo models = 1;
    int64 total = 2;
}

message DeleteModelReq {
    string userId = 1;
    string orgId = 2;
    string modelId = 3;
}

message GetModelReq{
    string userId = 1;
    string orgId = 2;
    string modelId = 3;
}

message ListModelsReq{
    string modelType = 1;       // 模型类型
    string provider = 2;        // 模型供应商
    bool isActive = 3;          // 启用状态（true: 启用，false: 禁用）
    string userId = 4;
    string orgId = 5;
    string displayName = 6;           // 模型显示名称
}

message ModelStatusReq {
    string modelId = 1;
    bool isActive = 2;          // 启用状态（true: 启用，false: 禁用）
    string userId = 3;
    string orgId = 4;
}

message GetModelByIdReq{
    string modelId = 1;
    string userId = 2;
    string orgId = 3;
}

message GetModelByIdsReq{
    string userId = 1;
    string orgId = 2;
    repeated string modelIds = 3;
}

message ListTypeModelsReq {
    string userId = 1;
    string orgId = 2;
    string modelType = 3;       // 模型类型
}
